<resources>
    <string name="app_name">Morning Star ScanTrack" </string>
    <string name="take_barcode_picture">SCAN BARCODES IN PICTURE</string>
    <string name="scan_barcode">SCAN BATCHES</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="scan_complete">SCANNING COMPLETE</string>
    <string name="batch_complete">BATCH COMPLETE</string>
    <string name="no_barcode"> </string>
    <string name="detector_init">Detector initialisation failed.</string>
    <string name="result"> %1$s\n   %2$s\n</string>
    <string name="scan">Scan</string>
    <string name="logo">Logo</string>
    <string name="morningstar">Morning Star</string>
    <string name="edit_batches">Edit Batches</string>
    <string name="sync">Sync</string>
    <string name="view_batches">View Batches</string>
    <string name="todo">TODO</string>
    <string name="enter_name">Country Name</string>
    <string name="sync_db">SYNC</string>
    <string name="view_db">VIEW INVENTORY</string>
    <string name="batch_management">MANAGE BATCHES</string>
    <string name="add_row_section">Add Row/Section</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No batches found</string>
    <string name="enter_desc">Row</string>
    <string name="enter_title">Section</string>
    <string name="search_db">SEARCH INVENTORY</string>
    <string name="search">SEARCH</string>
    <string name="checkbox">CheckBox</string>
    <string name="new_batch">NEW BATCH</string>
    <string name="edit_batch">EDIT</string>
    <string name="add_gps">ADD GPS</string>
    <string name="scanned_barcodes">SCANNED BARCODES:</string>
    <string name="add_sectionrow">Add Section/Row</string>
    <string name="row">Row</string>
    <string name="exit">exit</string>
    <string name="x">X</string>
    <string name="sec">Sec</string>
    <string name="last">Last</string>
    <string name="clear_scan">clear scan</string>
    <string name="scan_done">scanning done</string>
    <string name="batch_done">batch done</string>
    <string name="clear_batch">clear batch</string>
    <string name="quit">Quit</string>
</resources>
