<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="82dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/morningstar" />

    <Button
        android:id="@+id/button"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="269dp"
        android:text="@string/scan" />

    <Button
        android:id="@+id/button2"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="275dp"
        android:layout_marginRight="49dp"
        android:text="@string/edit_batches" />

    <Button
        android:id="@+id/button3"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="94dp"
        android:text="@string/sync" />

    <Button
        android:id="@+id/button4"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="94dp"
        android:text="@string/view_batches" />
</RelativeLayout>
