<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!--    <Button-->
    <!--        android:id="@+id/btnTakePicture"-->
    <!--        android:layout_width="218dp"-->
    <!--        android:layout_height="58dp"-->
    <!--        android:text="@string/take_barcode_picture"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.502"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.499" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="115dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/morning_star_oval_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnScanBarcode"
        android:layout_width="254dp"
        android:layout_height="94dp"
        android:layout_marginTop="212dp"
        android:background="#3B9C3F"
        android:textColor="@android:color/white"
        android:text="@string/scan_barcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBatch"
        android:layout_width="254dp"
        android:layout_height="94dp"
        android:layout_marginBottom="228dp"
        android:background="#3B9C3F"
        android:text="@string/view_batches"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="254dp"
        android:layout_height="94dp"
        android:layout_marginBottom="108dp"
        android:background="#3B9C3F"
        android:text="@string/search"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
